// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popper test trigger click 1`] = `
<button
  id="btn"
>
  button
</button>
`;

exports[`Popper test trigger click 2`] = `
<button
  id="btn"
>
  button
</button>
`;

exports[`Popper test trigger click 3`] = `
<button
  id="btn"
>
  button
</button>
`;

exports[`Popper test trigger contextMenu 1`] = `
<button
  id="btn"
>
  button
</button>
`;

exports[`Popper test trigger contextMenu 2`] = `
<button
  id="btn"
>
  button
</button>
`;

exports[`Popper test trigger contextMenu 3`] = `
<button
  id="btn"
>
  button
</button>
`;

exports[`Popper test trigger focus 1`] = `
<button
  id="btn"
>
  button
</button>
`;

exports[`Popper test trigger focus 2`] = `
<button
  id="btn"
>
  button
</button>
`;

exports[`Popper test trigger focus 3`] = `
Array [
  <button
    id="btn"
  >
    button
  </button>,
  <div
    aria-hidden="true"
    class="xl-popper"
    style="z-index: 1003; position: absolute; display: none;"
  >
    <div
      class="xl-popper__inner"
      data-placement="top"
      style="position: relative; transform-origin: 0px 100%; display: none;"
    >
      <div>
        popup
      </div>
    </div>
  </div>,
]
`;

exports[`Popper test trigger hover 1`] = `
<button
  id="btn"
>
  button
</button>
`;

exports[`Popper test trigger hover 2`] = `
<button
  id="btn"
>
  button
</button>
`;

exports[`Popper test trigger hover 3`] = `
Array [
  <button
    id="btn"
  >
    button
  </button>,
  <div
    aria-hidden="true"
    class="xl-popper"
    style="z-index: 1000; position: absolute; display: none;"
  >
    <div
      class="xl-popper__inner"
      data-placement="top"
      style="position: relative; transform-origin: 0px 100%; display: none;"
    >
      <div>
        popup
      </div>
    </div>
  </div>,
]
`;
